[project]
name = "toyosu-qx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "simpy>=4.1.1",
]

[dependency-groups]
dev = [
    "marimo>=0.17.7",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]
