[project]
name = "toyosu-qx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.2.6",
    "openjij>=0.11.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "qiskit>=2.2.3",
    "scipy>=1.15.3",
    "simpy>=4.1.1",
]
